# GoPlusPlus

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
art/: GoPlusPlus.rc  xp_style.manifest
source/: canvas.h  frame.h  game.h  main.cpp
src/: canvas.cpp  frame.cpp  game.cpp
